<?xml version="1.0" encoding="utf-8"?>
<com.visma.common.VismaLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/blue_fragment_login_top_level_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/blue_fragment_login_second_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <EditText
            android:id="@+id/blue_fragment_login_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/visma_blue_hint_email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textAppearance="@android:style/TextAppearance.Medium">

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/blue_fragment_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/visma_blue_hint_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textAppearance="@android:style/TextAppearance.Medium" />

        <Button
            android:id="@+id/blue_fragment_login_button_login"
            style="@style/NordicCool.Button.Green"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/visma_blue_button_login" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/blue_fragment_login_button_demo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@null"
            android:text="@string/visma_blue_button_demo"
            android:textColor="@drawable/visma_blue_demo_textcolor_selector" />

        <View
            android:id="@+id/blue_fragment_login_change_server"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentLeft="true" />
    </RelativeLayout>

</com.visma.common.VismaLinearLayout>