<?xml version="1.0" encoding="utf-8"?>
<ListView xmlns:android="http://schemas.android.com/apk/res/android"
          android:id="@+id/blue_integrations_list"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical">
</ListView>