<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/blue_activity_tutorial_button_login"
        style="@style/NordicCool.Button.Green"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/visma_blue_button_login"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp" />

    <android.support.v4.view.ViewPager
        android:id="@+id/blue_activity_tutorial_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/blue_activity_tutorial_button_login" />

    <com.viewpagerindicator.CirclePageIndicator
        android:id="@+id/blue_activity_tutorial_indicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/blue_activity_tutorial_button_login"
        android:layout_marginBottom="30dp"
        android:padding="10dp"
        app:fillColor="@color/nc_blue"
        app:pageColor="@color/nc_grey_light"
        app:radius="4dp"
        app:strokeColor="@color/nc_grey_light" />

</RelativeLayout>